--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>redis-demo</module>
         <module>ionio-demo</module>
         <module>algo-demo</module>
+        <module>sina-demo</module>
+        <module>test-demo</module>
     </modules>
 
     <properties>
