--- a/kafka-demo/pom.xml
+++ b/kafka-demo/pom.xml
@@ -23,6 +23,15 @@
             <version>4.11</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>notk</groupId>
+            <artifactId>base-demo</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 
