--- a/pom.xml
+++ b/pom.xml
@@ -75,10 +75,22 @@
                 <artifactId>logback-core</artifactId>
                 <version>1.0.13</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.avro/avro-tools -->
+            <dependency>
+                <groupId>org.apache.avro</groupId>
+                <artifactId>avro-tools</artifactId>
+                <version>1.8.2</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.avro/avro -->
+            <dependency>
+                <groupId>org.apache.avro</groupId>
+                <artifactId>avro</artifactId>
+                <version>1.8.2</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
-
-
-
 
 </project>
