--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>base-demo</module>
         <module>mybatis-demo</module>
         <module>java-demo</module>
+        <module>spring-demo</module>
+        <module>MySpring-demo</module>
     </modules>
 
     <properties>
@@ -104,6 +106,15 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.16</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+                <scope>provided</scope>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
