--- a/mybatis-demo/src/main/resources/jdbc.properties
+++ b/mybatis-demo/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-mysql.driverClassName=
-mysql.url=
-mysql.username=
-mysql.password=
+mysql.driverClassName=com.mysql.jdbc.Driver
+mysql.url=jdbc:mysql://42.192.221.34:3306/test
+mysql.username=root
+mysql.password=123456
