--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>spring-demo</module>
         <module>MySpring-demo</module>
         <module>jmx-demo</module>
+        <module>springmvc-demo</module>
     </modules>
 
     <properties>
@@ -123,6 +124,53 @@
                 <version>1.7.25</version>
             </dependency>
 
+
+            <!--spring-->
+            <!-- Spring核心依赖 -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
+
+            <!-- Spring dao依赖 -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
+
+            <!-- Spring web依赖 -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>4.3.7.RELEASE</version>
+            </dependency>
 
 
         </dependencies>
