--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>MySpring-demo</module>
         <module>jmx-demo</module>
         <module>springmvc-demo</module>
+        <module>jvm-demo</module>
     </modules>
 
     <properties>
@@ -171,6 +172,14 @@
                 <artifactId>spring-test</artifactId>
                 <version>4.3.7.RELEASE</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>3.3.0</version>
+            </dependency>
+
 
 
         </dependencies>
