--- a/java-demo/pom.xml
+++ b/java-demo/pom.xml
@@ -29,6 +29,10 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+        </dependency>
     </dependencies>
 
 
